--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    padding-top:70px ;
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
@@ -28,7 +29,12 @@ html, body {
     padding: 10px 16px;
     font-size: 1rem;
 }
-
+#header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
 .card{
     background: linear-gradient(135deg, #2d2d1f, #2d2d2f);
     border: 2px solid #796956; /* темно кафеава рамка за добар контраст */
